--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
   <link href="css/style.css" rel="stylesheet" type="text/css">
-  <title>Furniture Homepage</title>
+  <title>Hello!</title>
 </head>
 <body>
   <nav id="navBar">
